# lab-cpp

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md
code/: CMakeLists.txt  TestUtils.cmake  handler.py
code/aws/: CMakeLists.txt  downloader.cc  downloader.h  downloader_test.cc  parquet-helper.h  parquet-helpers.h  parquet_helper.h  partial-file.cc  partial-file.h  s3fs-forked.cc  sdk-init.cc  sdk-init.h
code/aws/curl/: HandleContainer.cpp  HandleContainer.h  HttpClient.cpp  HttpClientFactory.cpp  HttpClientFactory.h
code/bee/: CMakeLists.txt  array_constant.h  bootstrap.h  column-cache.h  dispatcher.cc  dispatcher.h  executor.h  kernels.h  partial_results.h  physical-plan.h  physical_plan.cc  physical_plan.h  preproc-cache.h  processed_cache.h  processed_cache_test.cc  processed_column.h  processor.h  query.h  stats.cc  stats.h  stats_test.cc
code/filesystem/: CMakeLists.txt  aws-sdk.cc  aws-sdk.h  dispatcher.cc  downloader.cc  downloader.h  partial-file.h  s3fs-forked.cc  s3fs-forked.h  s3fs.cc  s3fs.h  scheduler.cc  scheduler.h
code/filesystem/curl/: HandleContainer.cpp  HandleContainer.h  HttpClient.cpp  HttpClient.h  HttpClientFactory.cpp
code/playground/: core-affinity.cc  flight-server.cc  mem-alloc-overprov.cc  mem-alloc-speed.cc  mem-bandwidth.cc  parquet-arrow-reader.cc  parquet-arrow-reader2.cc  parquet-bee.cc  parquet-raw-reader.cc  parquet-raw-reader2.cc  query-bandwidth.cc  query-bandwidth2.cc  query-bw-scheduler.cc  raw-alloc.cc  simd-support.cc
code/tests/: mem-alloc-overprov.cc  mem-alloc-speed.cc  mem-alloc.cc  parquet-raw-reader.cc  parquet-reader.cc  query-bandwidth.cc  raw-alloc.cc  reader-writer-from-examples.cc  simd-support.cc
code/util/: CMakeLists.txt  async_queue.cc  async_queue.h  async_queue_test.cc  bootstrap.h  cust_memory_pool.cc  cust_memory_pool.h  cust_memory_pool_test.cc  dispatcher.cc  dispatcher.h  file_location.h  logger.cc  logger.h  metrics.cc  metrics.h  partial-file.cc  partial-file.h  partial-file_test.cc  partial_file.cc  partial_file.h  partial_file_test.cc  result.h  scheduler.cc  scheduler.h  stats.cc  stats.h  stats_test.cc  toolbox.h  toolbox_test.cc  various.h
docker/amznlinux1-build-cpp/: Dockerfile
docker/amznlinux1-run-cpp/: Dockerfile  README.md  docker-compose.builder.yaml  docker-compose.emulator.yaml  docker-compose.interactive.yaml  docker-compose.minio.builder.yaml  docker-compose.minio.emulator.yaml  docker-compose.minio.yaml  docker-compose.standalone.emulator.yaml  docker-compose.standalone.yaml  docker-compose.yaml  httpd.conf  nginx.conf  proxy-nginx.Dockerfile  proxy.Dockerfile  runtime-builder.Dockerfile  runtime-emulator.Dockerfile  runtime.Dockerfile
docker/arrow-cpp/: Dockerfile  bee-entrypoint.sh  bee.Dockerfile  benchmarks-entrypoint.sh  benchmarks.Dockerfile  docker-entrypoint.sh  hive-entrypoint.sh  hive.Dockerfile  packager
docker/aws-sdk-cpp/: Dockerfile
docker/lambda-runtime-cpp/: Dockerfile
docker/ubuntu-run-cpp/: Dockerfile  docker-compose.yaml
infra/: common.tf  main.tf  modules.tf  outputs.tf  playground-collect.tf  playground-generic.tf  playground-hive.tf  playground-test.tf  versioning.tf
infra/env/: conf.tf
infra/fargate/: ecs.tf  iam.tf  inputs.tf  locals.tf  outputs.tf
infra/lambda/: iam.tf  inputs.tf  lambda.tf
infra/scheduler/: inputs.tf  scheduler.tf
